ingresses/5-hubmgt/overlays/portals/portal-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: apiportal
  namespace: apps
  annotations:
    hub.traefik.io/api-portal: portal
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`portal.${CLUSTERNAME}.${DOMAINNAME}`)
    kind: Rule
    services:
    - name: apiportal
      namespace: traefik
      port: 9903
  tls:
